<resources>
    <string name="app_name">Parrot Japanese</string>
    <string name="default_label">Label Here</string>
    <string name="str_btnStrategy">Introduction</string>
    <string name="str_btnHiragana">Hiragana</string>
    <string name="str_btnKatakana">Katakana</string>
    <string name="str_btnVocabulary">Essential vocabulary</string>
    <string name="str_btnGrammar">Basic Grammar</string>
    <string name="str_btnPhrase">Simple Phrases</string>
    <string name="str_btnAbout">About</string>
    <string name="str_btnExercise">Exercise</string>
    <string name="str_btnCount">Count Numbers</string>
    <string name="str_btnResource">Learning Resources</string>
    <string name="title_question">Question</string>

    <string name="action_settings">Settings</string>
    <string name="action_rate_app">Rate this app</string>
    <string name="action_about">About</string>

    <string name="share_content">Great app for Japanese beginers: </string>

    <!-- content to be displayed at strategy screen -->
    <string name="st_title">Keep calm and learn japanese !</string>
    <string name="app_desc">Parrot Japanese application is designed for the beginners and the speaking-oriented Japanese learners or who need to be familiar with Japanese in a very short time. It is useful to use this app as a small dictionary. For the beginners, following guidance to help using this app effectively:</string>
    <string-array name="st_steps">
        <item>Japanese alphabet: Hiragana and Katakana</item>
        <item>Learn vocabulary: Essential vocabulary and Count numbers</item>
        <item>Exercises</item>
        <item>Learn basic grammar</item>
        <item>Learn daily life simple phrases</item>
        <item>Goto next levels</item>
    </string-array>

    <string-array name="st_targets">
        <item>First step for you familiar with basic Japanese sounds and characters. You will remember them automatically when you go through other steps. So you should not waste weeks or a month to remember all of them before going to next steps.</item>
        <item>Take a few days or a week to take a look on all words once. You will come back here many times when necessary.</item>
        <item>Check your vocabulary with exercises</item>
        <item>Video series made by Japanese native speaker to help you learn simple Japanese grammar. These videos teach you to speak a sentence from very simple to complicated.</item>
        <item>Common use phrases which are not in grammar videos</item>
        <item>Learn more vocabulary, grammar, listening and writing skills from recommended resources</item>
    </string-array>
    <string name="st_goodbye">Have a good time!</string>
    <!-- end strategy screen -->


    <!-- content for resource screen -->
    <!--logo file name array for each resource -->
    <string-array name="res_logo_name">
        <item>logo_jppod101</item>
        <item>logo_erin</item>
        <item>logo_taekim</item>
        <item>logo_youtube</item>
        <item>logo_memrise</item>
        <item>logo_lang8</item>
        <item>logo_readthekanji</item>
    </string-array>

    <string-array name="res_title">
        <item>Japanesepod101</item>
        <item>Learning japanese with Erin</item>
        <item>Tae Kim\'s Guide To Japanese</item>
        <item>Youtube</item>
        <item>Memrise</item>
        <item>Lang-8</item>
        <item>ReadTheKanji</item>
    </string-array>

    <string name="res_title">Online resources</string>
    <string-array name="res_desc">
        <item>Japanesepod101 has a lot of audios, videos along with transcipt, vocabulary, exercises ... for different level learners</item>
        <item>Erin is a anime character who help you learn Japanese through diffrent situations. You will learn grammar and vocabulary with each situation.</item>
        <item>This guide to Japanese is one of the most well known on the internet. </item>
        <item>Most popular video sharing site. You can find a lot of stuffs here for learning Japanese: music, films, anime, cartoon ...</item>
        <item>Learning vocabulary website. After a specific time, this site will check your memory and it reminds you the forgot words.</item>
        <item>Lang-8 is a language exchange social network. You can write journal entries in Japanese and a Japanese native speaker will correct them for you.</item>
        <item>ReadTheKanji quizzes you on kanji inside of actual Japanese sentences. You have to read those kanji in different contexts.</item>
    </string-array>

    <string-array name="res_site">
        <item>japanesepod101.com</item>
        <item>erin.ne.jp</item>
        <item>guidetojapanese.org</item>
        <item>youtube.com</item>
        <item>memrise.com</item>
        <item>lang-8.com</item>
        <item>readthekanji.com</item>
    </string-array>
    <string name="res_end">Keep calm and learn Japanese !</string>

    <!-- setting screen -->
    <string name="title_activity_settings">Settings</string>
    <string name="pref_language_title">Language</string>
    <string name="pref_qa_title">Number of questions</string>
    <string name="pref_qa_summary">questions for each exercise</string>
    <string name="pref_sub_title">Create exercise by subject</string>
    <string name="pref_sub_summary">Learn vocabulary from one-by-one subject</string>

    <string-array name="pref_languages">
        <item>English</item>
        <item>Tiếng Việt</item>
    </string-array>

    <string-array name="pref_lang">
        <item>en</item>
        <item>vi</item>
    </string-array>

    <string name="pref_lang_default">en</string>

    <string-array name="pref_number_qa_entries">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
    </string-array>
    <string name="pref_number_qa_def">10</string>
    <!-- end setting screen -->

    <!-- about screen string -->
    <string name="about_share">Share to your friends</string>

    <!-- question screen -->
    <string-array name="answer">
        <item>answer 1</item>
        <item>answer 2</item>
        <item>answer 3</item>
        <item>answer 4</item>
    </string-array>
    <string name="qa_str_answer">Anwser:</string>
    <string name="qa_str_pronunciation">Pronunciation</string>
    <string name="qa_str_meaning">Word meaning</string>

    <!-- score screen -->
    <string name="str_score_title">Score</string>
    <string name="str_your_score">Your score:</string>
    <string name="str_btn_continue">Continue</string>
    <string name="str_btn_exit">Exit</string>

    <string name="thanks_state">Thanks for using this app.\nPlease share and encourage me on Google Play.</string>
    <string name="app_suggest">Another app by me on Google Play:</string>
</resources>
