<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:icon="@drawable/ic_settings"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_rate_app"
        android:orderInCategory="200"
        android:title="@string/action_rate_app"
        android:icon="@drawable/ic_rate_app"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="300"
        android:title="@string/action_about"
        android:icon="@drawable/ic_about"
        app:showAsAction="never" />
</menu>
