<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="30dp"
        android:gravity="center"
        android:text="@string/str_your_score"
        android:textSize="22sp"/>
    <TextView
        android:id="@+id/sc_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="100dp"
        android:gravity="center"
        android:text="10/10"
        android:textSize="60sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/sc_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_btn_continue"
            android:textAllCaps="false"
            android:textSize="18sp"/>
        <Button
            android:id="@+id/sc_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_btn_exit"
            android:textAllCaps="false"
            android:textSize="18sp"/>
    </LinearLayout>
</LinearLayout>