<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/noise_bkg"
    tools:context=".StrategyActivity">

    <TextView
        android:id="@+id/txtGreeting"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:text="@string/st_title"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:background="@drawable/noise_grey_bkg"/>

    <TextView
        android:id="@+id/txtEnjoyment"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:text="@string/st_goodbye"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:background="@drawable/noise_grey_bkg"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/txtGreeting"
        android:layout_above="@id/txtEnjoyment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:orientation="vertical">
            <ImageView
                android:layout_width="128dp"
                android:layout_height="96dp"
                android:padding="16dp"
                android:layout_gravity="center"
                android:src="@drawable/parrot_speaking"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_desc"
                android:textColor="@color/primary_text"
                android:textSize="15sp"/>

            <!-- put ListView here make unexpected view
                 size of ListView is fixed and put ListView inside ScrollView is a bad idea in GUI design -->
            <include
                layout="@layout/learning_step_item"
                android:id="@+id/step1"/>
            <include
                layout="@layout/learning_step_item"
                android:id="@+id/step2"/>
            <include
                layout="@layout/learning_step_item"
                android:id="@+id/step3"/>
            <include
                layout="@layout/learning_step_item"
                android:id="@+id/step4"/>
            <include
                layout="@layout/learning_step_item"
                android:id="@+id/step5"/>
            <include
                layout="@layout/learning_step_item"
                android:id="@+id/step6"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
